# nHale

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  commit-lint.yml  release.yml
docs/: error_correction.md  jpeg_steganography.md  steganography.md
src/: embedding.rs  encryption.rs  error_correction.rs  extraction.rs  integrity.rs  lib.rs  metadata.rs  pdf.rs  utils.rs  watermarking.rs  web.rs
